control/plasma_sf90.F90


      interface
         function PLASMA_ssygvd_Tile_c(itype,jobz,uplo,A,B,W,T,Q) &
          & bind(c, name='PLASMA_ssygvd_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_ssygvd_Tile_c
            integer(kind=c_int), value :: itype
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            type(c_ptr), value :: W
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
          end function PLASMA_ssygvd_Tile_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_ssymm_Tile_c(side,uplo,alpha,A,B,beta,C) &
          & bind(c, name='PLASMA_ssymm_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_ssymm_Tile_c
            integer(kind=c_int), value :: side
            integer(kind=c_int), value :: uplo
            real(kind=c_float), value :: alpha
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            real(kind=c_float), value :: beta
            type(c_ptr), value :: C
          end function PLASMA_ssymm_Tile_c
      end interface
#endif

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_ssyr2k_Tile_c(uplo,trans,alpha,A,B,beta,C) &
          & bind(c, name='PLASMA_ssyr2k_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_ssyr2k_Tile_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: trans
            real(kind=c_float), value :: alpha
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            real(kind=c_float), value :: beta
            type(c_ptr), value :: C
          end function PLASMA_ssyr2k_Tile_c
      end interface
#endif

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_ssyrk_Tile_c(uplo,trans,alpha,A,beta,C) &
          & bind(c, name='PLASMA_ssyrk_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_ssyrk_Tile_c
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: trans
            real(kind=c_float), value :: alpha
            type(c_ptr), value :: A
            real(kind=c_float), value :: beta
            type(c_ptr), value :: C
          end function PLASMA_ssyrk_Tile_c
      end interface
#endif

      interface
         function PLASMA_ssytrd_Tile_c(jobz,uplo,A,D,E,T,Q,LDQ) &
          & bind(c, name='PLASMA_ssytrd_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_ssytrd_Tile_c
            integer(kind=c_int), value :: jobz
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: D
            type(c_ptr), value :: E
            type(c_ptr), value :: T
            type(c_ptr), value :: Q
            integer(kind=c_int), value :: LDQ
          end function PLASMA_ssytrd_Tile_c
      end interface

      interface
         function PLASMA_slacpy_Tile_c(uplo,A,B) &
          & bind(c, name='PLASMA_slacpy_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_slacpy_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
          end function PLASMA_slacpy_Tile_c
      end interface

      interface
         function PLASMA_slange_Tile_c(norm,A) &
          & bind(c, name='PLASMA_slange_Tile')
            use iso_c_binding
            implicit none
            real(kind=c_float) :: PLASMA_slange_Tile_c
            integer(kind=c_int), value :: norm
            type(c_ptr), value :: A
          end function PLASMA_slange_Tile_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_slansy_Tile_c(norm,uplo,A) &
          & bind(c, name='PLASMA_slansy_Tile')
            use iso_c_binding
            implicit none
            real(kind=c_float) :: PLASMA_slansy_Tile_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
          end function PLASMA_slansy_Tile_c
      end interface
#endif

      interface
         function PLASMA_slansy_Tile_c(norm,uplo,A) &
          & bind(c, name='PLASMA_slansy_Tile')
            use iso_c_binding
            implicit none
            real(kind=c_float) :: PLASMA_slansy_Tile_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
          end function PLASMA_slansy_Tile_c
      end interface

      interface
         function PLASMA_slantr_Tile_c(norm,uplo,diag,A) &
          & bind(c, name='PLASMA_slantr_Tile')
            use iso_c_binding
            implicit none
            real(kind=c_float) :: PLASMA_slantr_Tile_c
            integer(kind=c_int), value :: norm
            integer(kind=c_int), value :: uplo
            integer(kind=c_int), value :: diag
            type(c_ptr), value :: A
          end function PLASMA_slantr_Tile_c
      end interface

      interface
         function PLASMA_slaset_Tile_c(uplo,alpha,beta,A) &
          & bind(c, name='PLASMA_slaset_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_slaset_Tile_c
            integer(kind=c_int), value :: uplo
            real(kind=c_float), value :: alpha
            real(kind=c_float), value :: beta
            type(c_ptr), value :: A
          end function PLASMA_slaset_Tile_c
      end interface

      interface
         function PLASMA_slaswp_Tile_c(A,K1,K2,IPIV,INCX) &
          & bind(c, name='PLASMA_slaswp_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_slaswp_Tile_c
            type(c_ptr), value :: A
            integer(kind=c_int), value :: K1
            integer(kind=c_int), value :: K2
            type(c_ptr), value :: IPIV
            integer(kind=c_int), value :: INCX
          end function PLASMA_slaswp_Tile_c
      end interface

      interface
         function PLASMA_slaswpc_Tile_c(A,K1,K2,IPIV,INCX) &
          & bind(c, name='PLASMA_slaswpc_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_slaswpc_Tile_c
            type(c_ptr), value :: A
            integer(kind=c_int), value :: K1
            integer(kind=c_int), value :: K2
            type(c_ptr), value :: IPIV
            integer(kind=c_int), value :: INCX
          end function PLASMA_slaswpc_Tile_c
      end interface

      interface
         function PLASMA_slauum_Tile_c(uplo,A) &
          & bind(c, name='PLASMA_slauum_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_slauum_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
          end function PLASMA_slauum_Tile_c
      end interface

#if defined(PRECISION_z) || defined(PRECISION_c)
      interface
         function PLASMA_splgsy_Tile_c(bump,A,seed) &
          & bind(c, name='PLASMA_splgsy_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_splgsy_Tile_c
            real(kind=c_float), value :: bump
            type(c_ptr), value :: A
            integer(kind=c_long_long), value :: seed
          end function PLASMA_splgsy_Tile_c
      end interface
#endif

      interface
         function PLASMA_splgsy_Tile_c(bump,A,seed) &
          & bind(c, name='PLASMA_splgsy_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_splgsy_Tile_c
            real(kind=c_float), value :: bump
            type(c_ptr), value :: A
            integer(kind=c_long_long), value :: seed
          end function PLASMA_splgsy_Tile_c
      end interface

      interface
         function PLASMA_splrnt_Tile_c(A,seed) &
          & bind(c, name='PLASMA_splrnt_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_splrnt_Tile_c
            type(c_ptr), value :: A
            integer(kind=c_long_long), value :: seed
          end function PLASMA_splrnt_Tile_c
      end interface

      interface
         function PLASMA_spltmg_Tile_c(mtxtype,A,seed) &
          & bind(c, name='PLASMA_spltmg_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_spltmg_Tile_c
            integer(kind=c_int), value :: mtxtype
            type(c_ptr), value :: A
            integer(kind=c_long_long), value :: seed
          end function PLASMA_spltmg_Tile_c
      end interface

      interface
         function PLASMA_spocon_Tile_c(uplo,A,anorm,rcond) &
          & bind(c, name='PLASMA_spocon_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_spocon_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            real(kind=c_float), value :: anorm
            type(c_ptr), value :: rcond
          end function PLASMA_spocon_Tile_c
      end interface

      interface
         function PLASMA_sposv_Tile_c(uplo,A,B) &
          & bind(c, name='PLASMA_sposv_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_sposv_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
          end function PLASMA_sposv_Tile_c
      end interface

      interface
         function PLASMA_spotrf_Tile_c(uplo,A) &
          & bind(c, name='PLASMA_spotrf_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_spotrf_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
          end function PLASMA_spotrf_Tile_c
      end interface

      interface
         function PLASMA_spotri_Tile_c(uplo,A) &
          & bind(c, name='PLASMA_spotri_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_spotri_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
          end function PLASMA_spotri_Tile_c
      end interface

      interface
         function PLASMA_spotrs_Tile_c(uplo,A,B) &
          & bind(c, name='PLASMA_spotrs_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_spotrs_Tile_c
            integer(kind=c_int), value :: uplo
            type(c_ptr), value :: A
            type(c_ptr), value :: B
          end function PLASMA_spotrs_Tile_c
      end interface

      interface
         function PLASMA_ssymm_Tile_c(side,uplo,alpha,A,B,beta,C) &
          & bind(c, name='PLASMA_ssymm_Tile')
            use iso_c_binding
            implicit none
            integer(kind=c_int) :: PLASMA_ssymm_Tile_c
            integer(kind=c_int), value :: side
            integer(kind=c_int), value :: uplo
            real(kind=c_float), value :: alpha
            type(c_ptr), value :: A
            type(c_ptr), value :: B
            real(kind=c_float), value :: beta
            type(c_ptr), value :: C
          end function PLASMA_ssymm_Tile_c
      end interface
